tests/fixtures/pass/inherent_associated_field_same_name.sc
let Answer = struct(answer: i32)

extend Answer {
  let answer = 2
}

let main(): i32 = {
  let value = Answer(40)
  value.answer + Answer.answer
}
